# statstrip

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.bat  pyproject.toml  requirements.txt  start_monitor.vbs  uninstall.bat
statstrip/: claude_local.py  claude_oauth.py  codex_appserver.py  codex_local.py  collector.py  config.py  display.py
tests/: test_claude_flapping.py  test_codex_appserver.py  test_codex_local.py  test_collector_codex.py  test_display_codex.py  test_theme_config.py
