[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "statstrip"
version = "0.1.0"
description = "Always-on-top system stats bar for Windows: CPU, RAM, disk, GPU(s), and optional Claude and Codex usage gauges."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "psutil",
    "pynvml",
    "requests",
]

[project.gui-scripts]
statstrip-collector = "statstrip.collector:main"
statstrip-display = "statstrip.display:main"

[tool.setuptools]
packages = ["statstrip"]
